# wherisitgui

./: CMakeLists.txt  README.md
.github/workflows/: build-qt-windows.yml
src/: IndexFormat.h  IndexerWorker.cpp  IndexerWorker.h  MainWindow.cpp  MainWindow.h
